--- a/src/SignUpForm.css
+++ b/src/SignUpForm.css
@@ -90,6 +90,7 @@
 }
 
 Button{
+  margin-top:2px;
   margin-bottom:10px;
 }
 
@@ -198,4 +199,8 @@ Button{
   0% {background-position: 0% 50%;}
   50% {background-position: 100% 50%;}
   100% {background-position: 0% 50%;}
+}
+
+.mb-3{
+  height:90px;
 }
