--- a/src/components/layoutAdmin/Sidebar.css
+++ b/src/components/layoutAdmin/Sidebar.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 260px;
   height: calc(100vh - 100px);
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   transition: width 0.3s ease;
   z-index: 1000;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
